--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           </div>
           <div class="card mod5">
             <img class="foto" src="img/fire.jpeg" />
+             <h5>CORPORATE HOLIDAYS</h5>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem.
